# Yandex_Client_Server

./: .travis.yml  CMakeLists.txt  README.md
include/: 1  Header.hpp  server.hpp
